tests/type_errors/calling_with_incorrect_args.sy
type A = foreign

def f
: Int -> Int
: a = x ' a

def x
: A -> A
: a = a

--+ expected exit status: 3
--+ expected stderr:
--+ 
